--- a/app/templates/msg_with_orders_for_client.j2
+++ b/app/templates/msg_with_orders_for_client.j2
@@ -4,8 +4,8 @@
 🛍️ WB скидка: {{data['spp_sum']}}₽ ({{data['spp_percent']}}%)<br>
 📈 Сегодня всего: <b>{{data['total_count_orders_today']}} шт. на {{data['total_sum_orders_today']}}₽</b><br>
 🆔 Артикул: <a href="https://www.wildberries.ru/catalog/{{data['nmId']}}/detail.aspx?targetUrl=SP">{{data['nmId']}}</a><br>
-📂 {{urllib(data['subject'])}}<br>
-™️ {{urllib(data['brand'])}}<br>
+📂 {{quote(data['subject'])}}<br>
+™️ {{quote(data['brand'])}}<br>
 {% if data['techSize'] != '0' %}
 📏Размер: <b>data['techSize']</b><br>
 {% endif %}
