--- a/app/templates/msg_with_sales_and_refunds_for_client.j2
+++ b/app/templates/msg_with_sales_and_refunds_for_client.j2
@@ -7,7 +7,7 @@
 📂 {{quote(data['subject'])}}<br>
 ™️ {{quote(data['brand'])}}<br>
 {% if data['techSize'] != '0' %}
-📏Размер: <b>data['techSize']</b><br>
+📏Размер: <b>{{data['techSize']}}</b><br>
 {% endif %}
 🏷 {{data['supplierArticle']}}<br>
 ⭐️ Рейтинг: {{data['reviewRating']}}<br>
