--- a/app/templates/msg_with_sales_and_refunds_for_client.j2
+++ b/app/templates/msg_with_sales_and_refunds_for_client.j2
@@ -16,5 +16,12 @@
 ⌛️ Вчера таких: <b>{{data['number_operations_with_this_nmId_yesterday']}} на {{data['total_sum_operations_with_this_nmId_yesterday']}}₽</b><br>
 🌎 {{data['warehouseName']}}<br>
 🚛 В пути до клиента: <b>{{data['inWayToClient']}}</b><br>
-🚚 В пути от клиента: <b>{{data['inWayFromClient']}}</b><br>
-📦 Остаток на складе: <b>{{data['quantity']}}</b><br>
+🚚 В пути от клиента: <b>{{data['inWayFromClient']}}</b><br><br>
+{% if len(data['stocks_on_warehouses']) != 0 %}
+👇<b>Остатки на складах</b><br><br>
+{% for warehouse in data['stocks_on_warehouses'] %}
+▶️ {{warehouse['warehouse_name']}}: <b>{{warehouse['stock']}} шт.</b> хватит на <b>{{warehouse['on_count_days']}} дн</b><br>
+{% endfor %}
+{% else %}
+▶️ <b>Не удалось получить данные</b><br>
+{% endif %}
