1. Обновил текст в шблонах сообщений. 2. Добавил общее кол-во остатков по складам в app/wb_monitoring/get_data_from_wb_new.py

--- a/app/templates/msg_with_orders_for_client.j2
+++ b/app/templates/msg_with_orders_for_client.j2
@@ -18,12 +18,14 @@
 🚛 В пути до клиента: <b>{{data['inWayToClient']}}</b><br>
 🚚 В пути от клиента: <b>{{data['inWayFromClient']}}</b><br><br>
 👇<b>Остатки на складах</b><br><br>
-{% if len(data['stocks_on_warehouses']) != 0 %}
+{% if len(data['stocks_on_warehouses']) != 0 and data['total_stocks_on_warehouses'] != 0 %}
 {% for warehouse in data['stocks_on_warehouses'] %}
 {% if warehouse['stock'] !=0 %}
 ▶️ {{warehouse['warehouse_name']}}: <b>{{warehouse['stock']}} шт.</b> хватит на <b>{{warehouse['on_count_days']}} дн</b><br>
 {% endif %}
 {% endfor %}
+{% elif len(data['stocks_on_warehouses']) != 0 and data['total_stocks_on_warehouses'] == 0 %}
+❌ Остатки исчерпаны, пополните запасы товара!!!
 {% else %}
 ▶️ <b>Не удалось получить данные</b><br>
 {% endif %}
