--- a/app/templates/no_send_alert_of_new_operations.j2
+++ b/app/templates/no_send_alert_of_new_operations.j2
@@ -1,2 +1,2 @@
-Мы видим, что вы не подписаны на канал создателя бота, поэтому в данный момент вы не можете получать уведомления 😢 <br>
-Для того, что вновь полноценно работать с нашим ботом -> <b>подпишитесь https://t.me/+Vf1YXieyC-Y1Njhi</b><br>
+Чтобы пользоваться ботом бесплатно, нужно быть подписанным на <a href="https://t.me/+Vf1YXieyC-Y1Njhi">канал</a><br><br>
+В канале регулярно выходит действительно много пользы для селлеров и я уверен, что вы для себя что-то возьмете 🤝
