Убрал ф-цию quote

--- a/app/templates/msg_with_sales_and_refunds_for_client.j2
+++ b/app/templates/msg_with_sales_and_refunds_for_client.j2
@@ -1,5 +1,5 @@
 🕛 <b>{{data['date_and_time_operation']}}</b><br>
-🔑 Данные для API ключа: <b>{{quote(data['name_key'])}}</b><br>	
+🔑 Данные для API ключа: <b>{{data['name_key']}}</b><br>	
 🛒 <b>{{data['typeOperation']}}</b> [{{data['total_count_operations_today']}}]: <b>{{data['finishedPrice']}}₽</b><br>
 🛍️ WB скидка: {{data['spp_sum']}}₽ ({{data['spp_percent']}}%)<br>
 📈 Сегодня всего: <b>{{data['total_count_operations_today']}} шт. на {{data['total_sum_operations_today']}}₽</b><br>
