--- a/app/templates/msg_with_orders_for_client.j2
+++ b/app/templates/msg_with_orders_for_client.j2
@@ -1,5 +1,5 @@
 🕛 <b>{{data['date_and_time_order']}}</b><br>
-🔑 Данные для API ключа: <b>{{quote(data['name_key'])}}</b><br>	
+🔑 Данные для API ключа: <b>{{data['name_key']}}</b><br>	
 🛒 <b>Заказ 📦</b> [{{data['total_count_orders_today']}}]: <b>{{data['finishedPrice']}}₽</b><br>
 🛍️ WB скидка: {{data['spp_sum']}}₽ ({{data['spp_percent']}}%)<br>
 📈 Сегодня всего: <b>{{data['total_count_orders_today']}} шт. на {{data['total_sum_orders_today']}}₽</b><br>
