--- a/app/templates/no_send_alert_of_new_operations.j2
+++ b/app/templates/no_send_alert_of_new_operations.j2
@@ -1,2 +1,3 @@
 Чтобы пользоваться ботом бесплатно, нужно быть подписанным на <a href="https://t.me/+Vf1YXieyC-Y1Njhi">канал</a><br><br>
-В канале регулярно выходит действительно много пользы для селлеров и я уверен, что вы для себя что-то возьмете 🤝
+В канале регулярно выходит действительно много пользы для селлеров и я уверен, что вы для себя что-то возьмете 🤝<br><br>
+После подписки на канал оповещения о заказах начнут приходить при следующей проверке (примерно через 30 минут)
